--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-semantic-toasts": "^0.6.5",
     "react-slideshow-image": "^3.4.7",
     "sass": "^1.35.1",
     "semantic-ui-css": "^2.4.1",
