--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "@artsy/fresnel": "^1.7.0",
+    "@firebase/storage": "^0.5.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "env": "0.0.2",
+    "firebase": "^8.7.1",
+    "form-data": "^4.0.0",
     "node-sass": "^6.0.1",
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.2",
